# nDGPemu

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.cfg
cache/: TableMean.npy  k_vals.npy  my_style.py  nDGPemu_LC_k5_woSN_PCA3_z2.joblib  pca.pkl
nDGPemu/: __init__.py  emulator.py
nDGPemu/cache/: Test_Bk.npy
nDGPemu/tests/: test_model.py
notebooks/: example.ipynb
