[project]
name = "nDGPemu"
version = "0.1.0"
description = "Emulator of the boost factor for the dark matter power spectrum in nDGP gravity models"
readme = "README.rst"
requires-python = ">=3.6"
license = {file = "LICENSE.txt"}
keywords = ["modified gravity", "cosmology", "nDGP", "Dark Matter", "Power spectrum"]
authors = [
  {name = "Bartolomeo Fiorini", email = "b.fiorini@qmul.ac.uk"},
]
classifiers = [
  "Development Status :: Production",
  "Programming Language :: Python"
]

dependencies = [
  "numpy",
  "scipy",
  "scikit-learn",
  "joblib"
]
